--- a/test/output/label.html.erb
+++ b/test/output/label.html.erb
@@ -93,3 +93,7 @@
 <%= link_to_remote t(:label_add_event), {:url => { :controller => 'events', :action => "new", :rid => params['rid'] },
      :update => "event_form"}, {:class => 'action'} %>
 
+<td>
+SkillName:<%=@skill_name%>
+</td>
+<script>inlineScriptShouldIgnore();</script>
